--- a/src/assets/scss/layout/chat-main.scss
+++ b/src/assets/scss/layout/chat-main.scss
@@ -1,65 +1,67 @@
-@import "../components/chat-input";
-@import "../components/chat-message";
+@import '../components/chat-input';
+@import '../components/chat-message';
+@import '../utils/mixins.scss';
 
 // Основная часть чата
 .chat-main {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  min-width: 0;
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	min-width: 0;
 
-  &__header {
-    display: flex;
-    justify-content: space-between;
-    background-color: $primary-color;
-    padding: 8px 16px;
-    border-bottom: 1px solid $border-color;
-  }
+	&__header {
+		display: flex;
+		justify-content: space-between;
+		background-color: $primary-color;
+		padding: 8px 16px;
+		border-bottom: 1px solid $border-color;
+	}
 
-  &__recipient {
-    display: flex;
-    align-items: center;
-    gap: 16px;
+	&__recipient {
+		display: flex;
+		align-items: center;
+		gap: 16px;
 
-    &-info {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 4px;
-    }
+		img {
+			@include avatar();
+		}
+		&-info {
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+			gap: 4px;
+		}
 
-    &-name {
-      font-weight: bold;
-    }
+		&-name {
+			font-weight: bold;
+		}
 
-    &-status {
-      color: grey;
-      font-size: 0.85rem;
-    }
-  }
+		&-status {
+			color: grey;
+			font-size: 0.85rem;
+		}
+	}
 
-  &__actions {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-  }
+	&__actions {
+		@include flex-center();
+		gap: 20px;
+	}
+	//Need Mixins
+	&__action-button {
+		background: none;
+		border: none;
+		padding: 10px;
+		cursor: pointer;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 
-  &__action-button {
-    background: none;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+		&:hover {
+			background-color: rgba(0, 0, 0, 0.05);
+		}
+	}
 
-    &:hover {
-      background-color: rgba(0, 0, 0, 0.05);
-    }
-  }
-
-  &__footer {
-    padding: 0 32px 24px;
-  }
+	&__footer {
+		padding: 0 32px 24px;
+	}
 }
