organize form into ChatInput molecule and ChatFooter organism

--- a/src/assets/scss/utils/mixins.scss
+++ b/src/assets/scss/utils/mixins.scss
@@ -16,3 +16,14 @@
 	height: $size;
 	border-radius: 50%;
 }
+
+@mixin input-base {
+	border: none;
+	outline: none;
+	flex-grow: 1;
+	background-color: transparent;
+
+	&::placeholder {
+		color: #999;
+	}
+}
