--- a/src/assets/scss/components/chat-input.scss
+++ b/src/assets/scss/components/chat-input.scss
@@ -1,22 +1,24 @@
+@import '../utils/mixins.scss';
+
 .chat-input {
-  display: flex;
-  gap: 16px;
-  padding: 18px;
-  background-color: $primary-color;
-  border: 1px solid #ddd;
-  border-radius: 12px;
+	display: flex;
+	gap: 16px;
+	padding: 18px;
+	background-color: $primary-color;
+	border: 1px solid #ddd;
+	border-radius: 12px;
 
-  &__emoji-button,
-  &__send-button {
-    background: none;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-  }
+	&__emoji-button,
+	&__send-button {
+		background: none;
+		border: none;
+		padding: 0;
+		cursor: pointer;
+	}
 
-  &__field {
-    flex-grow: 1;
-    border: none;
-    outline: none;
-  }
+	&__field {
+		flex-grow: 1;
+		border: none;
+		outline: none;
+	}
 }
