--- a/src/assets/scss/components/chat-list-item.scss
+++ b/src/assets/scss/components/chat-list-item.scss
@@ -1,65 +1,64 @@
-@import "../utils/mixins.scss";
+@import '../utils/mixins.scss';
 
 .chat-list__item {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-  padding: 12px 16px;
-  cursor: pointer;
-  border-bottom: 1px solid #eaeaea;
+	display: flex;
+	align-items: center;
+	gap: 16px;
+	padding: 12px 16px;
+	cursor: pointer;
+	border-bottom: 1px solid #eaeaea;
 
-  &--active {
-    background-color: #f0f4f8;
-  }
+	&--active {
+		background-color: #f0f4f8;
+	}
 
-  // img {
-  //   width: 40px;
-  //   height: 40px;
-  // }
+	img {
+		@include avatar(48px);
+	}
 
-  &-content {
-    flex: 1;
-  }
+	&-content {
+		flex: 1;
+	}
 
-  &-header,
-  &-message {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    align-items: center;
-  }
+	&-header,
+	&-message {
+		display: grid;
+		grid-template-columns: 1fr auto;
+		align-items: center;
+	}
 
-  &-header {
-    margin-bottom: 4px;
-  }
+	&-header {
+		margin-bottom: 4px;
+	}
 
-  &-name,
-  &-preview {
-    @include text-ellipsis;
-  }
+	&-name,
+	&-preview {
+		@include text-ellipsis;
+	}
 
-  &-name {
-    font-weight: bold;
-  }
+	&-name {
+		font-weight: bold;
+	}
 
-  &-time {
-    font-size: 12px;
-    color: #707991;
-  }
+	&-time {
+		font-size: 12px;
+		color: #707991;
+	}
 
-  &-preview {
-    font-size: 14px;
-    color: #707991;
-  }
+	&-preview {
+		font-size: 14px;
+		color: #707991;
+	}
 
-  &-count {
-    @include flex-center();
-    min-width: 16px;
-    min-height: 16px;
-    line-height: 16px;
-    background-color: #28d76f;
-    color: $primary-color;
-    font-size: 12px;
-    border-radius: 50%;
-    padding: 2px;
-  }
+	&-count {
+		@include flex-center();
+		min-width: 16px;
+		min-height: 16px;
+		line-height: 16px;
+		background-color: #28d76f;
+		color: $primary-color;
+		font-size: 12px;
+		border-radius: 50%;
+		padding: 2px;
+	}
 }
