--- a/src/assets/scss/layout/chat-asside.scss
+++ b/src/assets/scss/layout/chat-asside.scss
@@ -1,45 +1,49 @@
-@import "../components/input-search";
-@import "../components/chat-list-item";
-@import "../utils/mixins.scss";
+@import '../components/input-search';
+@import '../components/chat-list-item';
+@import '../utils/mixins.scss';
 // Сайдбар
 .chat-sidebar {
-  flex: 0 0 25%;
-  background-color: $primary-color;
-  border-right: 1px solid $border-color;
-  display: flex;
-  flex-direction: column;
+	flex: 0 0 25%;
+	background-color: $primary-color;
+	border-right: 1px solid $border-color;
+	display: flex;
+	flex-direction: column;
+	transition: flex-basis 1s ease;
 
-  &__header {
-    display: flex;
-    gap: 16px;
-    padding: 8px 16px;
-  }
+	&--collapsed {
+		flex-basis: 0;
+	}
+	&__header {
+		display: flex;
+		gap: 16px;
+		padding: 8px 16px;
+	}
 
-  &__burger {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-    width: 24px;
-    margin: 13px 10px;
-    flex-shrink: 0;
-    cursor: pointer;
+	&__burger {
+		display: flex;
+		flex-direction: column;
+		gap: 4px;
+		width: 24px;
+		margin: 13px 10px;
+		flex-shrink: 0;
+		cursor: pointer;
 
-    &-line {
-      width: 100%;
-      height: 3px;
-      background-color: #707991;
-      border-radius: 2px;
-    }
-  }
-  &__nav {
-    flex-grow: 1;
-    overflow-y: auto;
-    padding: 0;
-  }
+		&-line {
+			width: 100%;
+			height: 3px;
+			background-color: #707991;
+			border-radius: 2px;
+		}
+	}
+	&__nav {
+		flex-grow: 1;
+		overflow-y: auto;
+		padding: 0;
+	}
 
-  .chat-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
+	.chat-list {
+		list-style: none;
+		padding: 0;
+		margin: 0;
+	}
 }
